@@ -195,10 +195,10 @@ Vue.component('lms-ui-settings', {
      </v-list-tile-content>
      <v-list-tile-action><v-switch v-model="infoBackdrop"></v-switch></v-list-tile-action>
     </v-list-tile>
-    <div class="dialog-padding"></div>
-    <v-header v-if="isAndroid">{{i18n('Player')}}</v-header>
+    <div v-if="showPlayerConfig" class="dialog-padding"></div>
+    <v-header v-if="showPlayerConfig">{{i18n('Player')}}</v-header>
 
-    <v-list-tile v-if="isAndroid">
+    <v-list-tile v-if="showPlayerConfig">
      <v-list-tile-content @click="showPlayerMenuEntry = !showPlayerMenuEntry" class="switch-label">
       <v-list-tile-title>{{i18n("Add menu option to start player")}}</v-list-tile-title>
       <v-list-tile-sub-title>{{i18n('Add option to main menu to launch player.')}} {{i18n("(Currently only 'SB Player' is supported.)")}}</v-list-tile-title>
@@ -244,7 +244,8 @@ Vue.component('lms-ui-settings', {
                            { value: 10, label: "10%"}
                          ],
             volumeStep: 5,
-            showPlayerMenuEntry: false
+            showPlayerMenuEntry: false,
+            showPlayerConfig: isAndroid()
         }
     },
     computed: {
